--- a/RainmeterStudio/Resources/Strings.resx
+++ b/RainmeterStudio/Resources/Strings.resx
@@ -171,4 +171,34 @@
   <data name="ProjectCreateDialog_Title" xml:space="preserve">
     <value>Create project</value>
   </data>
+  <data name="ProjectPanel_CollapseAllCommand_DisplayText" xml:space="preserve">
+    <value>Collapse all</value>
+  </data>
+  <data name="ProjectPanel_CollapseAllCommand_ToolTip" xml:space="preserve">
+    <value>Collapse all</value>
+  </data>
+  <data name="ProjectPanel_ExpandAllCommand_DisplayText" xml:space="preserve">
+    <value>Expand all</value>
+  </data>
+  <data name="ProjectPanel_ExpandAllCommand_ToolTip" xml:space="preserve">
+    <value>Expand all</value>
+  </data>
+  <data name="ProjectPanel_RefreshCommand_DisplayText" xml:space="preserve">
+    <value>Refresh</value>
+  </data>
+  <data name="ProjectPanel_RefreshCommand_ToolTip" xml:space="preserve">
+    <value>Refresh</value>
+  </data>
+  <data name="ProjectPanel_ShowAllFilesCommand_DisplayText" xml:space="preserve">
+    <value>Show all files</value>
+  </data>
+  <data name="ProjectPanel_ShowAllFilesCommand_ToolTip" xml:space="preserve">
+    <value>Show all files</value>
+  </data>
+  <data name="ProjectPanel_SyncWithActiveViewCommand_DisplayText" xml:space="preserve">
+    <value>Sync with active view</value>
+  </data>
+  <data name="ProjectPanel_SyncWithActiveViewCommand_ToolTip" xml:space="preserve">
+    <value>Sync with active view</value>
+  </data>
 </root>
