Work on resource and settings managers, added some documentation.

--- a/RainmeterStudio.SkinDesigner/Resources/Graphics.resx
+++ b/RainmeterStudio.SkinDesigner/Resources/Graphics.resx
@@ -117,7 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="TransparentBackground" xml:space="preserve">
-    <value>/Resources/Graphics/transparent_background.png</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="TransparentBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>graphics\transparent_background.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
