--- a/RainmeterStudio.TextEditor/Resources/Strings.resx
+++ b/RainmeterStudio.TextEditor/Resources/Strings.resx
@@ -117,118 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CreateDocumentDialog_Name" xml:space="preserve">
-    <value>Name:</value>
+  <data name="Template_Text_Description" xml:space="preserve">
+    <value>Blank text file</value>
   </data>
-  <data name="CreateDocumentDialog_Path" xml:space="preserve">
-    <value>Path:</value>
-  </data>
-  <data name="CreateDocumentDialog_Title" xml:space="preserve">
-    <value>New item</value>
-  </data>
-  <data name="Dialog_Browse" xml:space="preserve">
-    <value>Browse</value>
-  </data>
-  <data name="Dialog_Cancel" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="Dialog_Create" xml:space="preserve">
-    <value>Create</value>
-  </data>
-  <data name="Dialog_FileType_AllFiles" xml:space="preserve">
-    <value>All files</value>
-  </data>
-  <data name="Dialog_FileType_Project" xml:space="preserve">
-    <value>RainmeterStudio project</value>
-  </data>
-  <data name="Dialog_OK" xml:space="preserve">
-    <value>OK</value>
-  </data>
-  <data name="Dialog_OpenProject_Title" xml:space="preserve">
-    <value>Open project...</value>
-  </data>
-  <data name="Command_DocumentCloseCommand_DisplayText" xml:space="preserve">
-    <value>_Close</value>
-  </data>
-  <data name="Command_DocumentCloseCommand_ToolTip" xml:space="preserve">
-    <value>Close active document</value>
-  </data>
-  <data name="Command_DocumentCreateCommand_DisplayText" xml:space="preserve">
-    <value>_File...</value>
-  </data>
-  <data name="Command_DocumentCreateCommand_ToolTip" xml:space="preserve">
-    <value>Create a new file</value>
-  </data>
-  <data name="MainWindow_File" xml:space="preserve">
-    <value>_File</value>
-  </data>
-  <data name="MainWindow_File_New" xml:space="preserve">
-    <value>_New</value>
-  </data>
-  <data name="MainWindow_File_Open" xml:space="preserve">
-    <value>_Open</value>
-  </data>
-  <data name="Command_ProjectCreateCommand_DisplayText" xml:space="preserve">
-    <value>_Project...</value>
-  </data>
-  <data name="Command_ProjectCreateCommand_ToolTip" xml:space="preserve">
-    <value>Create a new project</value>
-  </data>
-  <data name="CreateProjectDialog_Location" xml:space="preserve">
-    <value>Location:</value>
-  </data>
-  <data name="CreateProjectDialog_LocationDefault" xml:space="preserve">
-    <value>Set location as default</value>
-  </data>
-  <data name="CreateProjectDialog_Name" xml:space="preserve">
-    <value>Name:</value>
-  </data>
-  <data name="CreateProjectDialog_Path" xml:space="preserve">
-    <value>Path:</value>
-  </data>
-  <data name="CreateProjectDialog_PathCreateFolder" xml:space="preserve">
-    <value>Create directory for project</value>
-  </data>
-  <data name="CreateProjectDialog_Title" xml:space="preserve">
-    <value>Create project</value>
-  </data>
-  <data name="Command_ProjectOpenCommand_DisplayText" xml:space="preserve">
-    <value>_Project...</value>
-  </data>
-  <data name="Command_ProjectOpenCommand_ToolTip" xml:space="preserve">
-    <value>Open existing project</value>
-  </data>
-  <data name="Command_ProjectPanel_CollapseAllCommand_DisplayText" xml:space="preserve">
-    <value>Collapse all</value>
-  </data>
-  <data name="Command_ProjectPanel_CollapseAllCommand_ToolTip" xml:space="preserve">
-    <value>Collapse all</value>
-  </data>
-  <data name="Command_ProjectPanel_ExpandAllCommand_DisplayText" xml:space="preserve">
-    <value>Expand all</value>
-  </data>
-  <data name="Command_ProjectPanel_ExpandAllCommand_ToolTip" xml:space="preserve">
-    <value>Expand all</value>
-  </data>
-  <data name="Command_ProjectPanel_RefreshCommand_DisplayText" xml:space="preserve">
-    <value>Refresh</value>
-  </data>
-  <data name="Command_ProjectPanel_RefreshCommand_ToolTip" xml:space="preserve">
-    <value>Refresh</value>
-  </data>
-  <data name="Command_ProjectPanel_ShowAllFilesCommand_DisplayText" xml:space="preserve">
-    <value>Show all files</value>
-  </data>
-  <data name="Command_ProjectPanel_ShowAllFilesCommand_ToolTip" xml:space="preserve">
-    <value>Show all files</value>
-  </data>
-  <data name="Command_ProjectPanel_SyncWithActiveViewCommand_DisplayText" xml:space="preserve">
-    <value>Sync with active view</value>
-  </data>
-  <data name="Command_ProjectPanel_SyncWithActiveViewCommand_ToolTip" xml:space="preserve">
-    <value>Sync with active view</value>
-  </data>
-  <data name="MainWindow_Title" xml:space="preserve">
-    <value>Rainmeter Studio</value>
+  <data name="Template_Text_DisplayText" xml:space="preserve">
+    <value>Text file</value>
   </data>
 </root>
