Rewrote Reference class

--- a/RainmeterStudio/Resources/Strings.resx
+++ b/RainmeterStudio/Resources/Strings.resx
@@ -240,4 +240,19 @@
   <data name="CreateProjectDialog_Browse_Title" xml:space="preserve">
     <value>Select project path</value>
   </data>
+  <data name="CloseUnsavedDialog_Message" xml:space="preserve">
+    <value>The following files have unsaved changes:</value>
+  </data>
+  <data name="CloseUnsavedDialog_Question" xml:space="preserve">
+    <value>Do you want to save these changes?</value>
+  </data>
+  <data name="CloseUnsavedDialog_Title" xml:space="preserve">
+    <value>Unsaved changes</value>
+  </data>
+  <data name="Dialog_DoNotSave" xml:space="preserve">
+    <value>Do_n't save</value>
+  </data>
+  <data name="Dialog_Save" xml:space="preserve">
+    <value>_Save</value>
+  </data>
 </root>
